add: unit tests for NewFunctionsGenerator: parsing JSON to JMEOS functions